# picow_bluetooth_2way_comms

./: README.md
flutter/: blecontroller.dart  main.dart
picow/: CMakeLists.txt  ble_2way.c  ble_2way_modified.txt  mygatt.gatt
